tests/fail/sema_move.stderr
error[E0438]: Use of moved value: '^r1'
 --> tests/fail/sema_move.tk:20:14
   |
 20 |     auto x = r1.w // Error: use of moved value
   |              ^
error[E0438]: Use of moved value: '^r1'
 --> tests/fail/sema_move.tk:20:14
   |
 20 |     auto x = r1.w // Error: use of moved value
   |              ^
